# TECFileSystem

./: .gitignore  CMakeLists.txt  DiskNode.cpp  DiskNode.h  IMemoryBlock.h  MemoryBlock.h  Parameters_TECFS_Disk.xml  RAID_5.cpp  README.md  TECFS-Disk.h  main.cpp  mytext.txt
ControllerNode/: CMakeLists.txt  Client.cpp  Client.h  Divider.h  Huffman.h  Server.cpp  Server.h  Tree_Node.h  configfile  hola.txt  main.cpp  tinyxml2.cpp  tinyxml2.h
RAID/: CMakeLists.txt  DiskNode.cpp  DiskNode.h  Huffman.h  IMemoryBlock.h  List.h  MemoryBlock.h  Node.h  Parameters_TECFS_Disk.xml  RAID_5.cpp  RAID_5.h  TECFS-Disk.h  Tree_Node.h  configfile  main.cpp
ceROBOT/: Client.cpp  Divider.h  Huffman.h  ServerManager.cpp  ServerManager.h  Tree_Node.h  ceROBOT.pro  configfile  iconos.qrc  json.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
docs/ControllerNode/html/: Client_8cpp.html  Client_8cpp_source.html  Client_8h.html  Client_8h_source.html  Divider_8h.html  Divider_8h_source.html  Huffman_8h.html  Huffman_8h_source.html  List_8h.html  List_8h_source.html  Node_8h.html  Node_8h_source.html  Server_8cpp.html  Server_8cpp_source.html  Server_8h.html  Server_8h_source.html  Tree__Node_8h.html  Tree__Node_8h_source.html  annotated.html  classClient-members.html  classClient.html  classList-members.html  classList.html  classNode-members.html  classNode.html  classServer-members.html  classServer.html  classTree__Node-members.html  classTree__Node.html  classdivider-members.html  classdivider.html  classes.html  classnlohmann_1_1basic__json-members.html  (+357 more)
(+1408 files in other folders)
